# se-toolkit-hackathon

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
mcp/mcp_schedule/: pyproject.toml
mcp/mcp_schedule/src/mcp_schedule/: __init__.py  __main__.py  database.py  server.py  sync.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot-webchat/nanobot_webchat/: channel.py
nanobot-webchat/nanobot_webchat/static/: index.html
nanobot/workspace/skills/schedule/: SKILL.md
nanobot/workspace/web/: index.html
presentation/: presentation.html  slides.md
webapp/: Dockerfile  app.py
webapp/templates/: index.html
