[project]
name = "mcp-schedule"
version = "0.1.0"
description = "MCP server for schedule data from Google Sheets"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp_schedule = "mcp_schedule.server:main"
